k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.k8s.local
      http:
        paths:
          - path: /aggregator(?:/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: aggregator
                port:
                  number: 3000
          - path: /movies(?:/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: movies
                port:
                  number: 3000
